<resources>
    <string name="app_name">Farm game</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="register">Register</string>
    <string name="previous">Previous</string>

    <string name="Welcome">Welcome</string>
    <string name="username">username</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shop">Shop</string>
    <string name="player">Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="name">name</string>
    <string name="harvest_all">Harvest All</string>
    <string name="sell_all">Sell All</string>
    <string name="buy_the_product">Buy the Product</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="minus">-</string>
</resources>